# mx-sdk-rs-0.17.2-versions-changed

./: CHANGELOG.md  Cargo.toml  README.md  arwen.sh  test-arwen.sh
contracts/examples/crypto-kitties/common/kitty/: Cargo.toml
contracts/examples/crypto-kitties/common/kitty/src/: color.rs  kitty_genes.rs  lib.rs
contracts/examples/moax-dct-swap/: Cargo.toml
contracts/examples/moax-dct-swap/abi/: Cargo.toml
contracts/examples/moax-dct-swap/abi/src/: main.rs
contracts/examples/moax-dct-swap/denali/: unwrap_moax.scen.json  wrap_moax.scen.json
contracts/examples/moax-dct-swap/src/: lib.rs
contracts/examples/moax-dct-swap/tests/: moax_dct_swap_denali_go_test.rs  moax_dct_swap_denali_rs_test.rs
contracts/examples/moax-dct-swap/wasm/: Cargo.toml
contracts/feature-tests/async/: Cargo.toml
contracts/feature-tests/async/async-alice/: Cargo.toml
contracts/feature-tests/async/async-alice/src/: lib.rs
contracts/feature-tests/async/async-alice/wasm/: Cargo.toml
contracts/feature-tests/async/async-alice/wasm/src/: lib.rs
contracts/feature-tests/async/async-bob/: Cargo.toml
contracts/feature-tests/async/async-bob/src/: lib.rs
contracts/feature-tests/async/async-bob/wasm/: Cargo.toml
contracts/feature-tests/async/async-bob/wasm/src/: lib.rs
contracts/feature-tests/async/denali/: forw_raw_async_accept_dct.scen.json  forw_raw_async_accept_moax.scen.json  forw_raw_async_echo.scen.json  forw_raw_direct_dct.scen.json  forw_raw_sync_moax.scen.json  forwarder_call_async_accept_dct.scen.json  forwarder_call_async_accept_moax.scen.json  forwarder_call_async_accept_nft.scen.json  forwarder_call_sync_accept_dct.scen.json  forwarder_call_sync_accept_moax.scen.json  forwarder_call_sync_accept_nft.scen.json  forwarder_call_sync_accept_then_read_dct.scen.json  forwarder_call_sync_accept_then_read_moax.scen.json  forwarder_call_sync_accept_then_read_nft.scen.json  forwarder_call_transf_exec_accept_dct.scen.json  forwarder_call_transf_exec_accept_dct_twice.scen.json  forwarder_call_transf_exec_accept_moax.scen.json  forwarder_call_transf_exec_accept_moax_twice.scen.json  forwarder_call_transf_exec_accept_nft.scen.json  forwarder_call_transf_exec_accept_return_values.scen.json  forwarder_call_transf_exec_accept_sft_twice.scen.json  forwarder_nft_create.scen.json  forwarder_send_twice_dct.scen.json  forwarder_send_twice_moax.scen.json  recursive_caller_dct_1.scen.json  recursive_caller_dct_2.scen.json  recursive_caller_moax_1.scen.json  recursive_caller_moax_2.scen.json  send_dct.scen.json
contracts/feature-tests/async/forwarder/: Cargo.toml
contracts/feature-tests/async/forwarder-raw/: Cargo.toml
contracts/feature-tests/async/forwarder-raw/src/: lib.rs
contracts/feature-tests/async/forwarder-raw/wasm/: Cargo.toml
contracts/feature-tests/async/forwarder/src/: call_async.rs  call_sync.rs  call_transf_exec.rs  dct.rs  lib.rs  nft.rs  roles.rs  sft.rs  storage.rs
contracts/feature-tests/async/forwarder/wasm/: Cargo.toml
contracts/feature-tests/async/recursive-caller/: Cargo.toml
contracts/feature-tests/async/recursive-caller/src/: lib.rs
contracts/feature-tests/async/recursive-caller/wasm/: Cargo.toml
contracts/feature-tests/async/tests/: async_denali_go_test.rs  async_denali_rs_test.rs
contracts/feature-tests/async/vault/: Cargo.toml
contracts/feature-tests/async/vault/src/: lib.rs
contracts/feature-tests/async/vault/wasm/: Cargo.toml
contracts/feature-tests/use-module/: Cargo.toml  use_module_expected.abi.json
contracts/feature-tests/use-module/abi/: Cargo.toml
contracts/feature-tests/use-module/abi/src/: main.rs
contracts/feature-tests/use-module/denali/: use_module_dns_register.scen.json
contracts/feature-tests/use-module/src/: internal_mod_a.rs  internal_mod_b.rs  internal_mod_c.rs  lib.rs
contracts/feature-tests/use-module/tests/: use_module_abi_test.rs  use_module_denali_go_test.rs  use_module_denali_rs_test.rs  use_module_test.rs
contracts/feature-tests/use-module/wasm/: Cargo.toml
denali/: Cargo.toml  example.scen.json
denali/src/: account.rs  account_check.rs  account_raw.rs  account_raw_check.rs  scenario.rs  scenario_raw.rs
dharitri-codec/: Cargo.toml
dharitri-codec-derive/src/: nested_de_derive.rs  nested_en_derive.rs  top_de_derive.rs  top_en_derive.rs
dharitri-codec/src/: lib.rs  nested_de.rs  top_de_input.rs  top_ser_output.rs
dharitri-codec/tests/: empty_struct_derive_test.rs  enum_derive_test.rs  enum_or_default_derive_test.rs  enum_tricky_defaults_derive_fieldless_test.rs  enum_tricky_defaults_derive_test.rs  shadowing_test.rs  struct_derive_test.rs  struct_or_default_derive_test.rs  (+3 more)
dharitri-wasm/: Cargo.toml
dharitri-wasm-debug/: Cargo.toml
dharitri-wasm-derive/: Cargo.toml
dharitri-wasm-node/: Cargo.toml
dharitri-wasm-output/: Cargo.toml
dharitri-wasm/src/: err_msg.rs  lib.rs  log_util.rs  macros.rs
dharitri-wasm/src/api/: big_int_api.rs  big_uint_api.rs  blockchain_api.rs  call_value_api.rs  contract_self_api.rs  mod.rs  send_api.rs
dharitri-wasm/src/api/uncallable/: big_int_api_uncallable.rs  big_uint_api_uncallable.rs  send_api_uncallable.rs
dharitri-wasm/src/dct/: system_sc_proxy.rs
dharitri-wasm/src/hex_call_data/: cd_de.rs  cd_ser.rs
dharitri-wasm/src/io/: arg_de_input.rs  contract_call_arg.rs  dyn_arg.rs  dyn_arg_input.rs  finish.rs  macro_helpers.rs  signal_error.rs
dharitri-wasm/src/storage/: storage_get.rs  storage_set.rs
dharitri-wasm/src/storage/mappers/: linked_list_mapper.rs  map_mapper.rs  map_storage_mapper.rs  set_mapper.rs  single_value_mapper.rs  user_mapper.rs  vec_mapper.rs
dharitri-wasm/src/types/general/: boxed_bytes.rs  code_metadata.rs  dct_local_role.rs  dct_token_data.rs  dct_token_type.rs  h256.rs  h256_address.rs  queue.rs  token_identifier.rs
dharitri-wasm/src/types/interaction/: arg_buffer.rs  async_call.rs  callback_call.rs  contract_call.rs  mod.rs  send_dct.rs  send_moax.rs  send_token.rs
dharitri-wasm/src/types/io/: async_call_result.rs  multi_args.rs  multi_args_vec.rs  optional_arg.rs  sc_error.rs
dharitri-wasm/tests/: test_arg_load.rs
(+312 files in other folders)
