[package]
name = "moax-dct-swap"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = [ "dharitri-wasm-node",]

[dependencies.dharitri-wasm]
version = "0.1.3"
path = "../../../dharitri-wasm"

[dependencies.dharitri-wasm-derive]
version = "0.1.3"
path = "../../../dharitri-wasm-derive"

[dependencies.dharitri-wasm-node]
version = "0.1.3"
path = "../../../dharitri-wasm-node"
optional = true

[dev-dependencies.dharitri-wasm-debug]
version = "0.1.3"
path = "../../../dharitri-wasm-debug"
