[package]
name = "use-module"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@dharitri.com>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = [
    "dharitri-wasm-node",
    "dharitri-wasm-module-dns-wasm",
    "dharitri-wasm-module-features-wasm",
    "dharitri-wasm-module-pause-wasm"
]

default = [
    "dharitri-wasm-module-dns-default",
    "dharitri-wasm-module-features-default",
    "dharitri-wasm-module-pause-default"
]

[dependencies.dharitri-wasm-module-dns-wasm]
package = "dharitri-wasm-module-dns"
version = "0.1.3"
path = "../../modules/dharitri-wasm-module-dns"
features = ["wasm-output-mode"]
optional = true

[dependencies.dharitri-wasm-module-dns-default]
package = "dharitri-wasm-module-dns"
version = "0.1.3"
path = "../../modules/dharitri-wasm-module-dns"
optional = true

[dependencies.dharitri-wasm-module-features-wasm]
package = "dharitri-wasm-module-features"
version = "0.1.3"
path = "../../modules/dharitri-wasm-module-features"
features = ["wasm-output-mode"]
optional = true

[dependencies.dharitri-wasm-module-features-default]
package = "dharitri-wasm-module-features"
version = "0.1.3"
path = "../../modules/dharitri-wasm-module-features"
optional = true

[dependencies.dharitri-wasm-module-pause-wasm]
package = "dharitri-wasm-module-pause"
version = "0.1.3"
path = "../../modules/dharitri-wasm-module-pause"
features = ["wasm-output-mode"]
optional = true

[dependencies.dharitri-wasm-module-pause-default]
package = "dharitri-wasm-module-pause"
version = "0.1.3"
path = "../../modules/dharitri-wasm-module-pause"
optional = true

[dependencies.dharitri-wasm]
version = "0.1.3"
path = "../../../dharitri-wasm"

[dependencies.dharitri-wasm-derive]
version = "0.1.3"
path = "../../../dharitri-wasm-derive"

[dependencies.dharitri-wasm-node]
version = "0.1.3"
path = "../../../dharitri-wasm-node"
optional = true

[dev-dependencies.dharitri-wasm-debug]
version = "0.1.3"
path = "../../../dharitri-wasm-debug"
